tests/baselines/reference/ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.errors.txt
tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts(8,16): error TS2300: Duplicate identifier 'Origin'.
tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts(20,20): error TS2300: Duplicate identifier 'Origin'.


==== tests/cases/conformance/internalModules/DeclarationMerging/ClassAndModuleThatMergeWithStaticVariableAndExportedVarThatShareAName.ts (2 errors) ====
    class Point {
        constructor(public x: number, public y: number) { }
    
        static Origin: Point = { x: 0, y: 0 };
    }
    
    module Point {
        export var Origin = ""; //expected duplicate identifier error
                   ~~~~~~
!!! error TS2300: Duplicate identifier 'Origin'.
    }
    
    
    module A {
        export class Point {
            constructor(public x: number, public y: number) { }
    
            static Origin: Point = { x: 0, y: 0 };
        }
    
        export module Point {
            export var Origin = ""; //expected duplicate identifier error
                       ~~~~~~
!!! error TS2300: Duplicate identifier 'Origin'.
        }
    }